--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,8 @@ google-generativeai>=0.3.0
 
 # For Anthropic (optional)
 # anthropic>=0.18.0
+
+# System monitoring and interactive shell features
+psutil>=5.9.0
+watchdog>=3.0.0
+matplotlib>=3.7.0
